// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with largeViewport 1`] = `
<Headroom
  height={180}
  onStickyTopChanged={[Function]}
  parent={
    <html>
      <head />
      <body />
    </html>
  }
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={90}
  zIndex={1}
>
  <Header__HeaderContainer>
    <Header__Row
      hasTitle={false}
    >
      <HeaderLogo
        buildConfig={
          Object {
            "aboutUrls": Object {
              "default": "https://integreat-app.de/about/",
              "en": "https://integreat-app.de/en/about/",
            },
            "allowedHostNames": Array [
              "cms.integreat-app.de",
              "cms-test.integreat-app.de",
            ],
            "appDescription": "Integreat – die lokale und mehrsprachige Integrations-Plattform für Zugewanderte",
            "appIcon": "app_icon_integreat",
            "appName": "IntegreatTestCms",
            "assets": "integreat",
            "campaign": Object {
              "campaignAppLogo": "/campaign-app-logo.png",
              "endDate": "2021-03-15T00:00:00.000Z",
              "startDate": "2021-03-04T00:00:00.000Z",
            },
            "cmsUrl": "https://cms-test.integreat-app.de",
            "darkTheme": Object {
              "colors": Object {
                "backgroundAccentColor": "#fafafa",
                "backgroundColor": "#ffffff",
                "textColor": "#000000",
                "textDecorationColor": "#c7c7c7",
                "textDisabledColor": "#d0d0d0",
                "textSecondaryColor": "#585858",
                "themeColor": "#fbda16",
                "tunewsThemeColor": "#007aa8",
                "tunewsThemeColorLight": "rgba(0, 122, 168, 0.4)",
              },
              "fonts": Object {
                "arabicWebviewFontFamilies": "'OpenSans', 'Lateef', sans-serif",
                "contentFontBold": "OpenSans-Bold",
                "contentFontFamily": "'Open Sans', 'Lateef', sans-serif",
                "contentFontRegular": "OpenSans-Regular",
                "contentFontSize": "0.95rem",
                "contentLineHeight": 1.4,
                "decorativeFontBold": "Raleway-Bold",
                "decorativeFontFamily": "'Raleway', 'Lateef', sans-serif",
                "decorativeFontRegular": "Raleway-Regular",
                "decorativeFontSize": "0.95rem",
                "decorativeLineHeight": 1.3,
                "fontSizeAdjust": 0.55,
                "standardParagraphMargin": "0.75rem",
                "subTitleFontSize": "1.8rem",
                "webviewFontFamilies": "'OpenSans', sans-serif",
              },
            },
            "featureFlags": Object {
              "developerFriendly": true,
              "fixedCity": null,
              "introSlides": true,
              "newsStream": true,
              "pois": true,
              "pushNotifications": true,
              "sentry": false,
            },
            "icons": Object {
              "appLogo": "/app-logo.png",
              "appleTouchIcon": "/apple-touch-icon.png",
              "favicons": "/favicons/",
              "locationMarker": "/location-marker.svg",
              "socialMediaPreview": "/social-media-preview.png",
            },
            "internalLinksHijackPattern": "https?:\\\\/\\\\/(cms(-test)?\\\\.integreat-app\\\\.de|web\\\\.integreat-app\\\\.de|integreat\\\\.app)(?!\\\\/[^/]*\\\\/(wp-content|wp-admin|wp-json)\\\\/.*).*",
            "itunesAppId": "1072353915",
            "lightTheme": Object {
              "colors": Object {
                "backgroundAccentColor": "#fafafa",
                "backgroundColor": "#ffffff",
                "textColor": "#000000",
                "textDecorationColor": "#c7c7c7",
                "textDisabledColor": "#d0d0d0",
                "textSecondaryColor": "#585858",
                "themeColor": "#fbda16",
                "tunewsThemeColor": "#007aa8",
                "tunewsThemeColorLight": "rgba(0, 122, 168, 0.4)",
              },
              "fonts": Object {
                "arabicWebviewFontFamilies": "'OpenSans', 'Lateef', sans-serif",
                "contentFontBold": "OpenSans-Bold",
                "contentFontFamily": "'Open Sans', 'Lateef', sans-serif",
                "contentFontRegular": "OpenSans-Regular",
                "contentFontSize": "0.95rem",
                "contentLineHeight": 1.4,
                "decorativeFontBold": "Raleway-Bold",
                "decorativeFontFamily": "'Raleway', 'Lateef', sans-serif",
                "decorativeFontRegular": "Raleway-Regular",
                "decorativeFontSize": "0.95rem",
                "decorativeLineHeight": 1.3,
                "fontSizeAdjust": 0.55,
                "standardParagraphMargin": "0.75rem",
                "subTitleFontSize": "1.8rem",
                "webviewFontFamilies": "'OpenSans', sans-serif",
              },
            },
            "mainImprint": "
<h3>Angaben gemäß § 5 TMG:</h3>
<p>
  Tür an Tür – Digital Factory gGmbH<br />
  Wertachstr. 29<br />
  86153 Augsburg
</p>
<p>vertreten durch Herrn Daniel Kehne, Herrn Fritjof Knier</p>
<p>
  Aufsichtsbehörde: Finanzamt Augsburg-Stadt<br />
  Sitz der Gesellschaft: Augsburg<br />
  Handelsregister und Registernummer: HRB30759<br />
  Umsatzsteuer-Identifikationsnummer: DE307491397
</p>
<h3>Kontakt:</h3>
<table>
  <tbody>
  <tr>
    <td>Telefon:</td>
    <td>&nbsp;0821/90799-0</td>
  </tr>
  <tr>
    <td>E-Mail:</td>
    <td>info@integreat-app.de</td>
  </tr>
  </tbody>
</table>
<h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
<p>Tür an Tür – Digital Factory gGmbH<br />
  Wertachstr.
  29<br /> 86153 Augsburg
</p>
<h3>Haftungsausschluss (Disclaimer)</h3>
<p><strong>Haftung für Inhalte</strong></p>
<p>
  Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen
  Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet,
  übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf
  eine
  rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von
  Informationen
  nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem
  Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden
  Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
</p>
<p><strong>Haftung für Links</strong></p>
<p>
  Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben.
  Deshalb
  können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist
  stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum
  Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt
  der
  Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne
  konkrete
  Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir
  derartige Links umgehend entfernen.
</p>
<p><strong>Urheberrecht</strong></p>
<p>Die durch die Seitenbetreiber
  erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
  Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der
  schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für
  den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber
  erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche
  gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen
  entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend
  entfernen.
</p>
",
            "manifestUrl": "/manifest.json",
            "privacyUrls": Object {
              "default": "https://integreat-app.de/datenschutz/",
              "en": "https://integreat-app.de/en/privacy/",
            },
            "shareBaseUrl": "https://integreat.app",
            "splashScreen": Object {
              "backgroundColor": "#fbda16",
              "imageUrl": "/app-icon-cornered.jpg",
            },
            "switchCmsUrl": "https://cms.integreat-app.de",
          }
        }
        link="/random_route"
      />
      <HeaderTitle />
      <Header__ActionBar>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="icon"
          key="0"
          text="text"
        />
      </Header__ActionBar>
    </Header__Row>
    <Header__Row>
      <Header__NavigationBar>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
          tooltip="tooltip1"
        />
      </Header__NavigationBar>
    </Header__Row>
  </Header__HeaderContainer>
</Headroom>
`;

exports[`Header should match snapshot with smallViewport 1`] = `
<Headroom
  height={140}
  onStickyTopChanged={[Function]}
  parent={
    <html>
      <head />
      <body />
    </html>
  }
  pinStart={0}
  positionStickyDisabled={false}
  scrollHeight={70}
  zIndex={1}
>
  <Header__HeaderContainer>
    <Header__Row
      hasTitle={false}
    >
      <HeaderLogo
        buildConfig={
          Object {
            "aboutUrls": Object {
              "default": "https://integreat-app.de/about/",
              "en": "https://integreat-app.de/en/about/",
            },
            "allowedHostNames": Array [
              "cms.integreat-app.de",
              "cms-test.integreat-app.de",
            ],
            "appDescription": "Integreat – die lokale und mehrsprachige Integrations-Plattform für Zugewanderte",
            "appIcon": "app_icon_integreat",
            "appName": "IntegreatTestCms",
            "assets": "integreat",
            "campaign": Object {
              "campaignAppLogo": "/campaign-app-logo.png",
              "endDate": "2021-03-15T00:00:00.000Z",
              "startDate": "2021-03-04T00:00:00.000Z",
            },
            "cmsUrl": "https://cms-test.integreat-app.de",
            "darkTheme": Object {
              "colors": Object {
                "backgroundAccentColor": "#fafafa",
                "backgroundColor": "#ffffff",
                "textColor": "#000000",
                "textDecorationColor": "#c7c7c7",
                "textDisabledColor": "#d0d0d0",
                "textSecondaryColor": "#585858",
                "themeColor": "#fbda16",
                "tunewsThemeColor": "#007aa8",
                "tunewsThemeColorLight": "rgba(0, 122, 168, 0.4)",
              },
              "fonts": Object {
                "arabicWebviewFontFamilies": "'OpenSans', 'Lateef', sans-serif",
                "contentFontBold": "OpenSans-Bold",
                "contentFontFamily": "'Open Sans', 'Lateef', sans-serif",
                "contentFontRegular": "OpenSans-Regular",
                "contentFontSize": "0.95rem",
                "contentLineHeight": 1.4,
                "decorativeFontBold": "Raleway-Bold",
                "decorativeFontFamily": "'Raleway', 'Lateef', sans-serif",
                "decorativeFontRegular": "Raleway-Regular",
                "decorativeFontSize": "0.95rem",
                "decorativeLineHeight": 1.3,
                "fontSizeAdjust": 0.55,
                "standardParagraphMargin": "0.75rem",
                "subTitleFontSize": "1.8rem",
                "webviewFontFamilies": "'OpenSans', sans-serif",
              },
            },
            "featureFlags": Object {
              "developerFriendly": true,
              "fixedCity": null,
              "introSlides": true,
              "newsStream": true,
              "pois": true,
              "pushNotifications": true,
              "sentry": false,
            },
            "icons": Object {
              "appLogo": "/app-logo.png",
              "appleTouchIcon": "/apple-touch-icon.png",
              "favicons": "/favicons/",
              "locationMarker": "/location-marker.svg",
              "socialMediaPreview": "/social-media-preview.png",
            },
            "internalLinksHijackPattern": "https?:\\\\/\\\\/(cms(-test)?\\\\.integreat-app\\\\.de|web\\\\.integreat-app\\\\.de|integreat\\\\.app)(?!\\\\/[^/]*\\\\/(wp-content|wp-admin|wp-json)\\\\/.*).*",
            "itunesAppId": "1072353915",
            "lightTheme": Object {
              "colors": Object {
                "backgroundAccentColor": "#fafafa",
                "backgroundColor": "#ffffff",
                "textColor": "#000000",
                "textDecorationColor": "#c7c7c7",
                "textDisabledColor": "#d0d0d0",
                "textSecondaryColor": "#585858",
                "themeColor": "#fbda16",
                "tunewsThemeColor": "#007aa8",
                "tunewsThemeColorLight": "rgba(0, 122, 168, 0.4)",
              },
              "fonts": Object {
                "arabicWebviewFontFamilies": "'OpenSans', 'Lateef', sans-serif",
                "contentFontBold": "OpenSans-Bold",
                "contentFontFamily": "'Open Sans', 'Lateef', sans-serif",
                "contentFontRegular": "OpenSans-Regular",
                "contentFontSize": "0.95rem",
                "contentLineHeight": 1.4,
                "decorativeFontBold": "Raleway-Bold",
                "decorativeFontFamily": "'Raleway', 'Lateef', sans-serif",
                "decorativeFontRegular": "Raleway-Regular",
                "decorativeFontSize": "0.95rem",
                "decorativeLineHeight": 1.3,
                "fontSizeAdjust": 0.55,
                "standardParagraphMargin": "0.75rem",
                "subTitleFontSize": "1.8rem",
                "webviewFontFamilies": "'OpenSans', sans-serif",
              },
            },
            "mainImprint": "
<h3>Angaben gemäß § 5 TMG:</h3>
<p>
  Tür an Tür – Digital Factory gGmbH<br />
  Wertachstr. 29<br />
  86153 Augsburg
</p>
<p>vertreten durch Herrn Daniel Kehne, Herrn Fritjof Knier</p>
<p>
  Aufsichtsbehörde: Finanzamt Augsburg-Stadt<br />
  Sitz der Gesellschaft: Augsburg<br />
  Handelsregister und Registernummer: HRB30759<br />
  Umsatzsteuer-Identifikationsnummer: DE307491397
</p>
<h3>Kontakt:</h3>
<table>
  <tbody>
  <tr>
    <td>Telefon:</td>
    <td>&nbsp;0821/90799-0</td>
  </tr>
  <tr>
    <td>E-Mail:</td>
    <td>info@integreat-app.de</td>
  </tr>
  </tbody>
</table>
<h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
<p>Tür an Tür – Digital Factory gGmbH<br />
  Wertachstr.
  29<br /> 86153 Augsburg
</p>
<h3>Haftungsausschluss (Disclaimer)</h3>
<p><strong>Haftung für Inhalte</strong></p>
<p>
  Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen
  Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet,
  übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf
  eine
  rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von
  Informationen
  nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem
  Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden
  Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
</p>
<p><strong>Haftung für Links</strong></p>
<p>
  Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben.
  Deshalb
  können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist
  stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum
  Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt
  der
  Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne
  konkrete
  Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir
  derartige Links umgehend entfernen.
</p>
<p><strong>Urheberrecht</strong></p>
<p>Die durch die Seitenbetreiber
  erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
  Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der
  schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für
  den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber
  erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche
  gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen
  entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend
  entfernen.
</p>
",
            "manifestUrl": "/manifest.json",
            "privacyUrls": Object {
              "default": "https://integreat-app.de/datenschutz/",
              "en": "https://integreat-app.de/en/privacy/",
            },
            "shareBaseUrl": "https://integreat.app",
            "splashScreen": Object {
              "backgroundColor": "#fbda16",
              "imageUrl": "/app-icon-cornered.jpg",
            },
            "switchCmsUrl": "https://cms.integreat-app.de",
          }
        }
        link="/random_route"
      />
      <Header__ActionBar>
        <HeaderActionItemLink
          href="/random_route"
          iconSrc="/icon.jpg"
          key="0"
          text="random route"
        />
      </Header__ActionBar>
    </Header__Row>
    <Header__Row>
      <Header__NavigationBar>
        <HeaderNavigationItem
          active={true}
          href="/another_route"
          icon="icon.jpg"
          key="0"
          text="text1"
          tooltip="tooltip1"
        />
      </Header__NavigationBar>
    </Header__Row>
  </Header__HeaderContainer>
</Headroom>
`;
